--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ Theme URI: https://bootscore.me/
 Author: Bastian Kreiter
 Author URI: https://crftwrk.de
 Description: A powerful Bootstrap Starter Onepage or Multi-Page Theme. Examples: https://bootscore.me/#examples, Documentation: https://bootscore.me/category/documentation/. This theme gives you full control whatever you do and the full freedom to design whatever you want. It comes with some useful header scripts and a wide selection of category, page, post, author and archive templates as well as sidebar, header, footer and 404 widgets. A preloader is included. There are just minor customizer settings in the backend. All important settings can only be made by touching the code. Some CSS, HTML, PHP and JS Skills are required to customize it completely. Make bootScore your own!
-Version: 1.0.6
+Version: 2.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: bootscore
-Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
+Tags: featured-images, threaded-comments, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
