--- a/css/theme_body.css
+++ b/css/theme_body.css
@@ -1,21 +1,17 @@
-body {
+/*body {
 	padding-top: 5rem;
 }
-
+*/
 
 #content {
     min-height: 600px;
 }
 
 ::-moz-selection {
-   color:#fff;
-   background:var(--primary);
    text-shadow: none;
 }
 
 ::selection {
-   color:#fff;
-   background:var(--primary);
    text-shadow: none;
 }
 
@@ -37,14 +33,6 @@ body {
 	}
 }
 
-.container.content {
-	padding-bottom: 4.5rem
-}
-
-.content-area.no-title {
-	margin-top: -5rem;
-	margin-bottom: -3rem;
-}
 
 
 /* Full width*/
@@ -76,7 +64,6 @@ iframe {
 }
 
 pre {
-	background: #f8f9fa;
 	font-family: "Courier 10 Pitch", Courier, monospace;
 	font-size: 15px;
 	font-size: 0.9375rem;
@@ -89,7 +76,6 @@ pre {
 }
 
 blockquote {
-	background: #f8f9fa;
 	border-radius: .25rem;
 	padding: 1.25rem;
 }
@@ -122,7 +108,6 @@ figure.wp-block-pullquote blockquote:before {
 q {
     padding: .2rem .4rem;
     font-size: 87.5%;
-    background-color: #f8f9fa;
     border-radius: .2rem;
 }
 
@@ -147,13 +132,10 @@ q::before {
 /* Button Reset */
 
 .wp-block-button {
-	color: #007bff;
 	margin-bottom: none;
 }
 
-.wp-block-button:hover {
-	color: #fff;
-}
+
 
 .wp-block-button__link {
 	background-color: none !important;
