--- a/css/theme_header.css
+++ b/css/theme_header.css
@@ -11,8 +11,8 @@
 
 @media (min-width:992px) {
     .navbar-expand-lg .navbar-nav .nav-link {
-        padding-right: 0;
-        padding-left: 1rem
+        padding-right: 0 !important;
+        padding-left: 1rem !important;
     }
 }
 
