--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://bootscore.me/
 Author: Bastian Kreiter
 Author URI: https://crftwrk.de
 Description: A powerful Bootstrap Starter Onepage or Multi-Page Theme with WooCommerce Support. Examples: https://bootscore.me/#examples, Documentation: https://bootscore.me/category/documentation/. This theme gives you full control whatever you do and the full freedom to design whatever you want. It comes with some useful header scripts and a wide selection of category, page, post, author and archive templates as well as sidebar, header, footer and 404 widgets. A preloader is included. There are just minor customizer settings in the backend. All important settings can only be made by touching the code. Some CSS, HTML, PHP and JS Skills are required to customize it completely. Make bootScore your own!
-Version: 3.0.0
+Version: 3.0.1
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: bootscore
@@ -27,7 +27,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 @import url("css/theme_colors.css");
 @import url("css/theme_fonts.css");
 @import url("css/theme_404.css");
-@import url("css/theme_category.css");
+@import url("css/theme_archive.css");
 @import url("css/theme_single.css");
 @import url("css/theme_comments.css");
 @import url("css/theme_sidebar.css");
@@ -44,8 +44,6 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*@import url("css/theme_header_transform.css");*/			/* Activate the script in js/theme.js in line 142 */
 /*@import url("css/theme_header_overlay.css");*/			/* Activate the script in js/theme.js in line 166 */
 /*@import url("css/theme_header_offcanvas.css");*/			/* Activate the script in js/theme.js in line 100, rename header.php in whateveryouwant.php and rename header-offcanvas.php into header.php */
-/*@import url("css/theme_header_blog_logo_center.css");*/	/* Rename header.php in whateveryouwant.php and rename header-blog-logo-center.php into header.php */
-/*@import url("css/theme_header_blog_logo_left.css");*/	/* Rename header.php in whateveryouwant.php and rename header-blog-logo-left.php into header.php */
 
 /* Content CSS - Add as much as you want*/
 @import url("css/custom.css");
