--- a/woocommerce/css/woocommerce.css
+++ b/woocommerce/css/woocommerce.css
@@ -1,8 +1,10 @@
-.woocommerce .woocommerce-result-count, .woocommerce-page .woocommerce-result-count {
+.woocommerce .woocommerce-result-count,
+.woocommerce-page .woocommerce-result-count {
     float: none;
 }
 
-.woocommerce .woocommerce-ordering, .woocommerce-page .woocommerce-ordering {
+.woocommerce .woocommerce-ordering,
+.woocommerce-page .woocommerce-ordering {
     float: none;
 }
 
@@ -38,7 +40,8 @@
     margin: 0 0 6px;
 }
 
-.woocommerce .cart-collaterals .cart_totals, .woocommerce-page .cart-collaterals .cart_totals {
+.woocommerce .cart-collaterals .cart_totals,
+.woocommerce-page .cart-collaterals .cart_totals {
     float: none;
     width: 100%;
 }
@@ -49,7 +52,9 @@
 
 
 
-#add_payment_method table.cart td.actions .coupon .input-text, .woocommerce-cart table.cart td.actions .coupon .input-text, .woocommerce-checkout table.cart td.actions .coupon .input-text {
+#add_payment_method table.cart td.actions .coupon .input-text,
+.woocommerce-cart table.cart td.actions .coupon .input-text,
+.woocommerce-checkout table.cart td.actions .coupon .input-text {
     float: none;
     border: 0;
     padding: 0;
@@ -57,7 +62,8 @@
 }
 
 
-.products .card .star-rating, .card .star-rating {
+.products .card .star-rating,
+.card .star-rating {
     float: none;
     margin: 1rem auto;
 }
@@ -69,12 +75,13 @@
 
 
 
+/*
 .woocommerce img,
 .woocommerce-page img {
     border-top-right-radius: calc(.25rem - 1px);
     border-top-left-radius: calc(.25rem - 1px);
 }
-
+*/
 
 span.badge.badge-danger.sale {
     position: absolute;
@@ -90,9 +97,7 @@ span.badge.badge-danger.sale {
 }
 
 
-a.added_to_cart.wc-forward {
-    display: none;
-}
+
 
 
 .card.h-100.d-flex.product a:hover {
@@ -163,7 +168,9 @@ ins {
 }
 
 
-#add_payment_method #payment div.payment_box, .woocommerce-cart #payment div.payment_box, .woocommerce-checkout #payment div.payment_box {
+#add_payment_method #payment div.payment_box,
+.woocommerce-cart #payment div.payment_box,
+.woocommerce-checkout #payment div.payment_box {
     border-radius: .25rem;
 }
 
@@ -171,27 +178,22 @@ ins {
 
 .card img.attachment-woocommerce_thumbnail {
     width: 100%;
+    border-top-right-radius: calc(.25rem - 1px);
+    border-top-left-radius: calc(.25rem - 1px);
 }
 
 
-span.badge.badge-danger.sale, span.badge.badge-danger.sale-product {
+span.badge.badge-danger.sale,
+span.badge.badge-danger.sale-product {
     font-size: 1.25rem;
-    
+
 }
 
 .woocommerce div.product .woocommerce-tabs ul.tabs li:nth-child(1) {
     margin-left: -16px;
 }
 
-.woocommerce div.product .woocommerce-tabs ul.tabs li:nth-child(1):before {
-    display: none;
-}
 
-
-
-ul.tabs.wc-tabs li:after {
-    display: none;
-}
 
 
 .woocommerce div.product .woocommerce-tabs ul.tabs::before {
@@ -219,11 +221,21 @@ button.single_add_to_cart_button.btn.btn-primary.disabled.wc-variation-selection
 
 
 
+
+
+
+
 .woocommerce #reviews #comment {
     height: 100%;
 }
 
 
+
+label.custom-control-label {
+    line-height: 1.5 !important;
+}
+
+/*
 
 .payment_methods .custom-control-label::before {
     top: .5rem;
@@ -241,7 +253,7 @@ button.single_add_to_cart_button.btn.btn-primary.disabled.wc-variation-selection
 .woocommerce-terms-and-conditions-checkbox-text.custom-control-label::after {
     top: .5rem;
 }
-
+*/
 
 
 .about_paypal {
@@ -260,7 +272,9 @@ button.single_add_to_cart_button.btn.btn-primary.disabled.wc-variation-selection
 }*/
 
 
-.woocommerce form.checkout_coupon, .woocommerce form.login, .woocommerce form.register {
+.woocommerce form.checkout_coupon,
+.woocommerce form.login,
+.woocommerce form.register {
     border: none;
     padding: 0;
     margin: 0;
@@ -275,8 +289,9 @@ button.single_add_to_cart_button.btn.btn-primary.disabled.wc-variation-selection
 
 /* Ajax spinner */
 
-.woocommerce .blockUI.blockOverlay:before,.woocommerce .loader:before {
-   
+.woocommerce .blockUI.blockOverlay:before,
+.woocommerce .loader:before {
+
     height: 3em;
     width: 3em;
     position: absolute;
@@ -294,8 +309,8 @@ button.single_add_to_cart_button.btn.btn-primary.disabled.wc-variation-selection
     line-height: 1;
     text-align: center;
     font-size: 2em;
-    
-    
+
+
     display: inline-block;
     width: 2rem;
     height: 2rem;
@@ -321,13 +336,12 @@ a.remove.remove_from_cart_button {
 a.remove.remove_from_cart_button {
     display: inline-block !important;
     font-weight: 400;
-    color: #212529;
     text-align: center;
     vertical-align: middle;
     user-select: none;
     background-color: transparent;
     border: 1px solid transparent;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
 a.remove.remove_from_cart_button:hover {
@@ -345,7 +359,8 @@ a.remove.remove_from_cart_button {
     margin-bottom: 2rem;
 }
 
-.woocommerce .woocommerce-terms-and-conditions, .woocommerce-page .woocommerce-terms-and-conditions {
+.woocommerce .woocommerce-terms-and-conditions,
+.woocommerce-page .woocommerce-terms-and-conditions {
     margin-bottom: 1rem;
     padding: 1.25rem;
 }
@@ -364,4 +379,94 @@ ul.tabs.wc-tabs {
 
 .reviews_tab {
     margin-right: 0;
+}
+
+
+
+
+
+
+
+
+.woocommerce ul.cart_list li img,
+.woocommerce ul.product_list_widget li img {
+    margin-left: 0px;
+}
+
+
+
+span.password-input {
+    width: 100%;
+}
+
+
+
+#order_review .legal label {
+    display: block !important;
+}
+
+
+.wc-gzd-product-name-left img {
+    border-radius: .25rem;
+    border: 1px solid transparent;
+}
+
+
+td.product-thumbnail img {
+    border-radius: .25rem;
+    border: 1px solid transparent;
+}
+
+
+.woocommerce #reviews #comments ol.commentlist {
+    padding: 0;
+}
+
+
+
+
+
+element.style {}
+
+.woocommerce #reviews #comments ol.commentlist li img.avatar {
+
+    padding: 0px;
+    width: 64px;
+
+    background: none;
+    border: none;
+    margin: 0;
+    box-shadow: none;
+    border-radius: .25rem;
+}
+
+
+
+
+#reviews #comments ol.commentlist li .comment-text {
+    margin: 0 0 0 80px !important;
+    border: 1px solid transparent !important;
+    border-radius: .25rem !important;
+}
+
+
+
+.woocommerce #respond input#submit {
+    font-size: 1rem;
+    line-height: 1.5;
+    padding: .375rem .75rem;
+    font-weight: normal;
+    border-radius: .25rem;
+    border: 1px solid;
+}
+
+
+.place-order div {
+    width: 100%;
+}
+
+
+button#place_order {
+    width: 100%;
+    margin-top: 1rem;
 }
