--- a/woocommerce/css/theme_header_woocommerce.css
+++ b/woocommerce/css/theme_header_woocommerce.css
@@ -265,9 +265,9 @@ li.woocommerce-mini-cart-item.mini_cart_item a {
 }
 
 
-
+/*
 .menu-header:hover, .cart-header:hover {
     text-decoration: none;
 }
-
+*/
 
