--- a/woocommerce/css/woocommerce_colors.css
+++ b/woocommerce/css/woocommerce_colors.css
@@ -1,59 +1,60 @@
 .card del .woocommerce-Price-amount.amount {
-	color: var(--danger)!important
+    color: var(--danger) !important
 }
 
 del {
-	color: var(--danger)
+    color: var(--danger)
 }
 
 .woocommerce form .form-row .required,
 .woocommerce form .form-row.woocommerce-invalid label {
-	color: var(--danger)
+    color: var(--danger)
 }
 
 .woocommerce form .form-row.woocommerce-invalid .select2-container,
 .woocommerce form .form-row.woocommerce-invalid input.input-text,
 .woocommerce form .form-row.woocommerce-invalid select {
-	border-color: var(--danger)
+    border-color: var(--danger)
 }
 
 .woocommerce form .form-row.woocommerce-validated .select2-container,
 .woocommerce form .form-row.woocommerce-validated input.input-text,
 .woocommerce form .form-row.woocommerce-validated select {
-	border-color: var(--success)
+    border-color: var(--success)
 }
 
 .woocommerce div.product p.price,
 .woocommerce div.product span.price {
-	color: var(--success)
+    color: var(--success)
 }
 
 .card .woocommerce-Price-amount.amount {
-	color: var(--success)
+    color: var(--success)
 }
 
 .woocommerce div.product p.price del,
 .woocommerce div.product span.price del {
-	opacity: 1
+    opacity: 1
 }
 
 .card a.woocommerce-LoopProduct-link.woocommerce-loop-product__link {
-	color: currentColor
+    color: currentColor
 }
 
 @media (max-width:768px) {
-	.woocommerce table.shop_table_responsive tr:nth-child(2n) td,
-	.woocommerce-page table.shop_table_responsive tr:nth-child(2n) td {
-		background-color: var(--light)
-	}
+
+    .woocommerce table.shop_table_responsive tr:nth-child(2n) td,
+    .woocommerce-page table.shop_table_responsive tr:nth-child(2n) td {
+        background-color: var(--light)
+    }
 }
 
 .woocommerce table.shop_table {
-	border-color: rgba(0, 0, 0, .125)
+    border-color: rgba(0, 0, 0, .125)
 }
 
 .woocommerce table.shop_table td {
-	border-color: rgba(0, 0, 0, .125)
+    border-color: rgba(0, 0, 0, .125)
 }
 
 #add_payment_method .cart-collaterals .cart_totals tr td,
@@ -62,82 +63,82 @@ del {
 .woocommerce-cart .cart-collaterals .cart_totals tr th,
 .woocommerce-checkout .cart-collaterals .cart_totals tr td,
 .woocommerce-checkout .cart-collaterals .cart_totals tr th {
-	border-color: rgba(0, 0, 0, .125)
+    border-color: rgba(0, 0, 0, .125)
 }
 
 #add_payment_method #payment div.payment_box,
 .woocommerce-cart #payment div.payment_box,
 .woocommerce-checkout #payment div.payment_box {
-	background-color: var(--light);
-	color: currentColor
+    background-color: var(--light);
+    color: currentColor
 }
 
 #add_payment_method #payment div.payment_box::before,
 .woocommerce-cart #payment div.payment_box::before,
 .woocommerce-checkout #payment div.payment_box::before {
-	content: "";
-	display: block;
-	border: 1em solid var(--light);
-	border-right-color: transparent;
-	border-left-color: transparent;
-	border-top-color: transparent;
-	position: absolute;
-	top: -.75em;
-	left: 0;
-	margin: -1em 0 0 2em
+    content: "";
+    display: block;
+    border: 1em solid var(--light);
+    border-right-color: transparent;
+    border-left-color: transparent;
+    border-top-color: transparent;
+    position: absolute;
+    top: -.75em;
+    left: 0;
+    margin: -1em 0 0 2em
 }
 
 .woocommerce div.product .woocommerce-tabs ul.tabs li {
-	border: 1px solid rgba(0, 0, 0, .125);
-	background-color: var(--light)
+    border: 1px solid rgba(0, 0, 0, .125);
+    background-color: var(--light)
 }
 
 .woocommerce div.product .woocommerce-tabs ul.tabs::before {
-	border-bottom: 1px solid rgba(0, 0, 0, .125)
+    border-bottom: 1px solid rgba(0, 0, 0, .125)
 }
 
 .woocommerce .blockUI.blockOverlay:before,
 .woocommerce .loader:before {
-	color: var(--primary)
+    color: var(--primary)
 }
 
 a.remove.remove_from_cart_button {
-	color: var(--danger)!important;
-	border-color: var(--danger)
+    color: var(--danger) !important;
+    border-color: var(--danger)
 }
 
 a.remove.remove_from_cart_button:hover {
-	color: #fff!important;
-	background-color: var(--danger)
+    color: #fff !important;
+    background-color: var(--danger)
 }
 
 .woocommerce-terms-and-conditions {
-	background: var(--light)
+    background: var(--light)
 }
 
 .woocommerce div.product .woocommerce-tabs ul.tabs li a {
-	color: var(--primary)
+    color: var(--primary)
 }
 
 button.single_add_to_cart_button.btn.btn-primary.disabled.wc-variation-selection-needed {
-	background-color: rgba(0, 0, 0, 0);
-	color: var(--primary)
+    background-color: rgba(0, 0, 0, 0);
+    color: var(--primary)
 }
 
 .woocommerce-checkout .shop_table {
-	background-color: rgba(255, 255, 255, 0)!important
+    background-color: rgba(255, 255, 255, 0) !important
 }
 
 .wc-gzd-product-name-left img {
-	border-color: rgba(0, 0, 0, .125)
+    border-color: rgba(0, 0, 0, .125)
 }
 
 td.product-thumbnail img {
-	border-color: rgba(0, 0, 0, .125)
+    border-color: rgba(0, 0, 0, .125)
 }
 
 a.remove.remove_from_cart_button {
-	color: currentColor
+    color: currentColor
 }
 
 
@@ -180,3 +181,9 @@ a.remove.remove_from_cart_button {
 
 
 
+/* Gallery Overlay */
+.pswp__bg {
+    background-color: rgba(0, 0, 0, 0.8);
+    backdrop-filter: grayscale(100%) blur(7px);
+    -webkit-backdrop-filter: grayscale(100%) blur(7px);
+}
