--- a/woocommerce/css/theme_header_woocommerce.css
+++ b/woocommerce/css/theme_header_woocommerce.css
@@ -242,9 +242,10 @@ p.woocommerce-mini-cart__buttons.buttons {
     float: left;
 }
 
+/*
 .cart-right p.woocommerce-mini-cart__empty-message {
     padding: 1rem;
-}
+}*/
 
 /*
 .cart-right .woocommerce ul.cart_list li img, .woocommerce ul.product_list_widget li img {
