--- a/woocommerce/css/theme_header_woocommerce.css
+++ b/woocommerce/css/theme_header_woocommerce.css
@@ -49,6 +49,14 @@
     }
 }
 
+
+@media (max-width: 991px) {
+    #nav-main {
+        min-height: 56px;
+    }
+}
+
+
 .bootscore-cart {
     cursor: pointer
 }
